--- a/less/variables.less
+++ b/less/variables.less
@@ -32,7 +32,7 @@
 
 // Type
 ////////////////////////////////////////////////////
-@font-family-serif:         Georgia, serif;
+@font-family-serif:         'Aleo', Georgia, serif;
 @font-family-sans-serif:    'Proxima Nova', Helvetica, sans-serif;
 @font-family-monospace:     monospace;
 
